[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "delfuzz"
version = "0.0.2"
authors = [
  { name="Franchesca Garcia", email="franchescabbg@gmail.com" },
  { name="Libby Brill", email="libby@brillfamily.net" },
]
description = "Fuzzy matching for Spanish names."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/fbbgarcia/delfuzz"